<resources>
    <string name="app_name">Elite Commander</string>
    <string name="elite_commander_logo">Elite Commander logo</string>
    <string name="format_cmdr">CMDR %s</string>
    <string name="format_percentage">%s%%</string>
    <string name="format_number">"%,d"</string>
    <string name="format_currency">"%,d" CR</string>
    <string name="format_distance">%,.0f LY</string>
    <string name="format_notoriety">Notoriety level: %s</string>
    <string name="edsm_base">https://www.edsm.net/</string>
    <string name="frontier_auth_base">https://auth.frontierstore.net/</string>
    <string name="frontier_api_base">https://companion.orerve.net/</string>
    <string name="login_dialog_error_title">Frontier login error</string>
    <string name="login_dialog_error_text">Error logging in to Frontier, please try again.</string>
    <string name="login_dialog_text">connect to your Frontier account in the browser that will be shown.</string>
    <string name="frontier_login">FRONTIER LOGIN</string>
    <string name="rank">Rank</string>
    <string name="rank_federation">Federation</string>
    <string name="rank_empire">Empire</string>
    <string name="rank_combat">Combat</string>
    <string name="rank_trading">Trade</string>
    <string name="rank_explore">Exploration</string>
    <string name="rank_cqc">Arena</string>
    <string-array name="ranks_combat">
        <item>Harmless</item>
        <item>Mostly Harmless</item>
        <item>Novice</item>
        <item>Competent</item>
        <item>Expert</item>
        <item>Master</item>
        <item>Dangerous</item>
        <item>Deadly</item>
        <item>Elite</item>
    </string-array>
    <string-array name="ranks_trading">
        <item>Penniless</item>
        <item>Mostly Penniless</item>
        <item>Peddler</item>
        <item>Dealer</item>
        <item>Merchant</item>
        <item>Broker</item>
        <item>Entrepreneur</item>
        <item>Tycoon</item>
        <item>Elite</item>
    </string-array>
    <string-array name="ranks_exploration">
        <item>Aimless</item>
        <item>Mostly Aimless</item>
        <item>Scout</item>
        <item>Surveyor</item>
        <item>Trailblazer</item>
        <item>Pathfinder</item>
        <item>Ranger</item>
        <item>Pioneer</item>
        <item>Elite</item>
    </string-array>
    <string-array name="ranks_cqc">
        <item>Helpless</item>
        <item>Mostly Helpless</item>
        <item>Amateur</item>
        <item>Semi Professional</item>
        <item>Professional</item>
        <item>Champion</item>
        <item>Hero</item>
        <item>Legend</item>
        <item>Elite</item>
    </string-array>
    <string-array name="ranks_federation">
        <item>None</item>
        <item>Recruit</item>
        <item>Cadet</item>
        <item>Midshipman</item>
        <item>Petty Officer</item>
        <item>Chief Petty Officer</item>
        <item>Warrant Officer</item>
        <item>Ensign</item>
        <item>Lieutenant</item>
        <item>Lieutenant Commander</item>
        <item>Post Commander</item>
        <item>Post Captain</item>
        <item>Rear Admiral</item>
        <item>Vice Admiral</item>
        <item>Admiral</item>
    </string-array>
    <string-array name="ranks_empire">
        <item>None</item>
        <item>Outsider</item>
        <item>Serf</item>
        <item>Master</item>
        <item>Squire</item>
        <item>Knight</item>
        <item>Lord</item>
        <item>Baron</item>
        <item>Viscount</item>
        <item>Count</item>
        <item>Earl</item>
        <item>Marquis</item>
        <item>Duke</item>
        <item>Prince</item>
        <item>King</item>
        <item>Admiral</item>
    </string-array>
    <string name="discovery_summary">Discovery summary</string>
    <string name="total_discovered">Discovered</string>
    <string name="total_mapped">Mapped</string>
    <string name="image_planet_star_discoveries">Image for the planet or star discoveries.</string>
    <string name="total_discovered_and_mapped"><![CDATA[Discovered & Mapped]]></string>
    <string name="discovered">Discovered</string>
    <string name="mapped">Mapped</string>
    <string name="first">First</string>
    <string name="body_star_o">O Blue-White Star</string>
    <string name="body_star_b">B Blue-White Star</string>
    <string name="body_star_b_blue_white_supergiant">B Blue-White super giant Star</string>
    <string name="body_star_a">A Blue-White Star</string>
    <string name="body_star_a_blue_white_supergiant">A Blue-White super giant Star</string>
    <string name="body_star_f">F White Star</string>
    <string name="body_star_f_whitesupergiant">F White super giant Star</string>
    <string name="body_star_g">G White-Yellow Star</string>
    <string name="body_star_g_white_yellow_supergiant">G White-Yellow super giant Star</string>
    <string name="body_star_k">K Yellow-Orange Star</string>
    <string name="body_star_k_yellow_orange_giant">K Yellow-Orange giant Star</string>
    <string name="body_star_m">M Red dwarf Star</string>
    <string name="body_star_m_red_giant">M Red giant Star</string>
    <string name="body_star_m_red_super_giant">M Red super giant Star</string>
    <string name="body_star_l">L Brown dwarf Star</string>
    <string name="body_star_t">T Brown dwarf Star</string>
    <string name="body_star_y">Y Brown dwarf Star</string>
    <string name="body_star_tts">"T Tauri Star"</string>
    <string name="body_star_aebe">Herbig Ae/Be Star</string>
    <string name="body_star_wolf">Wolf-Rayet Star</string>
    <string name="body_star_wolf_n">Wolf-Rayet N Star</string>
    <string name="body_star_wolf_nc">Wolf-Rayet NC Star</string>
    <string name="body_star_wolf_c">Wolf-Rayet C Star</string>
    <string name="body_star_wolf_o">Wolf-Rayet O Star</string>
    <string name="body_star_c">"C Carbon Star"</string>
    <string name="body_star_cs">CS Carbon Star</string>
    <string name="body_star_cn">CN Carbon Star</string>
    <string name="body_star_cj">CJ Carbon Star</string>
    <string name="body_star_ch">CH Carbon Star</string>
    <string name="body_star_chd">CHd Carbon Star</string>
    <string name="body_star_ms">MS-type Star</string>
    <string name="body_star_s">S-type Star</string>
    <string name="body_star_d">White Dwarf (D) Star"</string>
    <string name="body_star_da">White Dwarf (DA) Star</string>
    <string name="body_star_dab">White Dwarf (DAB) Star</string>
    <string name="body_star_dao">White Dwarf (DAO) Star</string>
    <string name="body_star_daz">White Dwarf (DAZ) Star</string>
    <string name="body_star_dav">White Dwarf (DAV) Star</string>
    <string name="body_star_db">White Dwarf (DB) Star</string>
    <string name="body_star_dbz">White Dwarf (DBZ) Star</string>
    <string name="body_star_dbv">White Dwarf (DBV) Star</string>
    <string name="body_star_do">White Dwarf (DO) Star</string>
    <string name="body_star_dov">White Dwarf (DOV) Star</string>
    <string name="body_star_dq">White Dwarf (DQ) Star</string>
    <string name="body_star_dc">White Dwarf (DC) Star</string>
    <string name="body_star_dcw">White Dwarf (DCW) Star</string>
    <string name="body_star_dx">White Dwarf (DX) Star</string>
    <string name="body_star_neutron">Neutron Star</string>
    <string name="body_black_hole">Black Hole</string>
    <string name="body_black_hole_super_massive">Super massive Black Hole</string>
    <string name="body_metal_rich">Metal rich body</string>
    <string name="body_high_metal_content">High metal content world</string>
    <string name="body_rocky">Rocky body</string>
    <string name="body_rocky_ice">Rocky ice world</string>
    <string name="body_icy">Icy body</string>
    <string name="body_earthlike">Earth-like world</string>
    <string name="body_water_world">Water World</string>
    <string name="body_water_giant">Water giant</string>
    <string name="body_ammonia_world">Ammonia world</string>
    <string name="body_giant_water_based">Gas giant with water based life</string>
    <string name="body_giant_ammonia_based">Gas giant with ammonia based life</string>
    <string name="body_sudarsky_class1">Class I gas giant</string>
    <string name="body_sudarsky_class2">Class II gas giant</string>
    <string name="body_sudarsky_class3">Class III gas giant</string>
    <string name="body_sudarsky_class4">Class IV gas giant</string>
    <string name="body_sudarsky_class5">Class V gas giant</string>
    <string name="body_helium_giant">Helium-rich gas giant</string>
    <string name="credits">Credits</string>
    <string name="current_location">Current location</string>
    <string name="current_ship">Current ship</string>
    <string name="assets_value">Assets</string>
    <string name="distance_sol">Distance to Sol</string>
    <string name="hull">hull</string>
    <string name="estimated_value">Estimated value</string>
    <string name="rep">REP</string>
    <string name="rank_alliance">Alliance</string>
    <string name="integrity">Integrity</string>
    <string name="profit">Profit</string>
    <string name="bounties">Bounties</string>
    <string name="combat_bonds">Combat bonds</string>
    <string name="assassinations">Assassinations</string>
    <string name="trading">Trading</string>
    <string name="exploration">Exploration</string>
    <string name="smuggling">Smuggling</string>
    <string name="search_rescue"><![CDATA[Search & Rescue]]></string>
    <string name="time_played">Time played</string>
    <string name="highest_reward">Highest</string>
    <string name="total">Total</string>
    <string name="mining">Mining</string>
    <string name="quantity">Quantity</string>
    <string name="download_error">Error downloading content</string>
    <string name="frontier_profile">Frontier profile</string>
    <string name="frontier_fleet">Frontier fleet</string>
    <string name="edsm_distance">EDSM distance search</string>
    <string name="frontier_journal_discoveries">Frontier journal discoveries</string>
    <string name="frontier_journal_statistics">Frontier journal statistics</string>
    <string name="combat">Combat</string>
    <string name="statistics">Statistics</string>
    <string name="ships_destroyed">Ships destroyed</string>
    <string name="skimmers_killed">Skimmers killed</string>
    <string name="bonds">Bonds</string>
    <string name="hyperspace_jumps">Hyperspace jumps</string>
    <string name="hyperspace_distance">Distance</string>
    <string name="systems_visited">Systems visited</string>
    <string name="greatest_distance_from_start">Greatest distance</string>
    <string name="planets_scanned">Planet scanned</string>
    <string name="planets_efficient_mapped">Efficient mapped</string>
    <string name="passengers_delivered">Delivered</string>
    <string name="passengers_ejected">Ejected</string>
    <string name="passengers">Passengers</string>
    <string name="passengers_bulk">Bulk</string>
    <string name="passengers_vip">VIP</string>
    <string name="last_journal">Last journal</string>
    <string name="markets_traded_with">Markets traded with</string>
    <string name="black_markets">Black markets</string>
    <string name="resources_traded">Resources traded</string>
    <string name="smuggled">Smuggled</string>
    <string name="trading_smuggling"><![CDATA[Trading & Smuggling]]></string>
    <string name="search">Search</string>
    <string name="nearest_facilities">Nearest Facilities</string>
    <string name="distance">Distance</string>
    <string name="jumps">Jumps</string>
    <string name="last_docked">Last docked</string>
    <string name="interstellar_factor">Interstellar Factor</string>
    <string name="raw_material_trader">Raw material  trader</string>
    <string name="encoded_material_trader">Encoded material trader</string>
    <string name="manufactured_material_trader">Manufactured material trader</string>
    <string name="technology_broker">Technology broker</string>
</resources>