<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium">

    <androidx.cardview.widget.CardView
        style="@style/EliteCardViewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/bodyImageView"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_planet_star_discoveries"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bodyNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text=""
                android:textAppearance="@style/eliteStyle.LightOrangeText"
                app:layout_constraintStart_toEndOf="@+id/bodyImageView"
                app:layout_constraintTop_toTopOf="@+id/bodyImageView" />

            <TextView
                android:id="@+id/discoveredTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discovered"
                android:textAlignment="textStart"
                android:textAppearance="@style/eliteStyle.SmallText"
                app:layout_constraintStart_toStartOf="@+id/bodyNameTextView"
                app:layout_constraintTop_toBottomOf="@+id/bodyNameTextView" />

            <TextView
                android:id="@+id/discoveredTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/eliteStyle.BodyDiscovery.Value"
                app:layout_constraintEnd_toEndOf="@+id/discoveredTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/discoveredTitleTextView" />

            <TextView
                android:id="@+id/firstDiscoveredTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/eliteStyle.BodyDiscovery.First"
                app:layout_constraintEnd_toEndOf="@+id/discoveredTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/discoveredTextView" />

            <TextView
                android:id="@+id/firstDiscoveredLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"
                android:textAppearance="@style/eliteStyle.SmallText"
                android:textColor="@color/elite_yellow"
                app:layout_constraintStart_toStartOf="@+id/discoveredTitleTextView"
                app:layout_constraintTop_toTopOf="@+id/firstDiscoveredTextView" />

            <TextView
                android:id="@+id/mappedTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/mapped"
                android:textAppearance="@style/eliteStyle.SmallText"
                app:layout_constraintStart_toEndOf="@+id/discoveredTitleTextView"
                app:layout_constraintTop_toTopOf="@+id/discoveredTitleTextView" />

            <TextView
                android:id="@+id/mappedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/eliteStyle.BodyDiscovery.Value"
                app:layout_constraintEnd_toEndOf="@+id/mappedTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/mappedTitleTextView" />

            <TextView
                android:id="@+id/firstMappedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/eliteStyle.BodyDiscovery.First"
                app:layout_constraintEnd_toEndOf="@+id/mappedTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/mappedTextView" />

            <TextView
                android:id="@+id/valueTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/estimated_value"
                android:textAlignment="textEnd"
                android:textAppearance="@style/eliteStyle.SmallText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/discoveredTitleTextView" />

            <TextView
                android:id="@+id/valueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="@style/eliteStyle.BodyDiscovery.Value"
                app:layout_constraintEnd_toEndOf="@+id/valueTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/valueTitleTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>

